<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_dash"
    android:orientation="vertical"
    android:paddingTop="80dp" >

    <com.google.android.apps.iosched.ui.widget.DashboardLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.02" >

        <ImageButton
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btn_settings"
            android:src="@drawable/button_settings"
            android:background="@null"/>

        <ImageButton
            android:id="@+id/btn_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/btn_calendar"
            android:src="@drawable/button_calendar" />

        <ImageButton
            android:id="@+id/btn_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/btn_help"
            android:src="@drawable/button_help" />
        
         <ImageButton
            android:id="@+id/btn_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/btn_about"
            android:src="@drawable/button_about" />

    </com.google.android.apps.iosched.ui.widget.DashboardLayout>

</LinearLayout>