<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/tv_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_nome"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/et_nome"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tv_dum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_menst"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/et_dia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.01"
                    android:text="@string/barra"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/et_mes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:focusable="true"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.01"
                    android:text="@string/barra"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/et_ano"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:focusable="true"
                    android:inputType="date" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_ciclo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_tam"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/et_ciclo"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:inputType="number" />

            <TextView
                android:id="@+id/data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_duracao"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/et_duracao"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:inputType="number" />

            <Button
                android:id="@+id/btn_enviar"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/btn_enviar" />
        </LinearLayout>
</ScrollView>